tests/snapshot/snapshots/snapshot__error_contract_with_custom_diagnostic.ncl.snap
---
source: tests/snapshot/main.rs
expression: snapshot
---
error: contract broken by a value: main error message
   ┌─ [INPUTS_PATH]/errors/contract_with_custom_diagnostic.ncl:11:1
   │
11 │ null | Contract
   │ ^^^^   ^^^^^^^^ expected type
   │ │       
   │ applied to this expression
   │
   = This is the first note
   = This is the second note


